# sandbox

./: .gitignore
ArtificialIntelligent/: .gitignore  Makefile  ai  ann.c  core.c  dbg.sh  linkedlist.c  main.c  random.c  readSetFile.c
ArtificialIntelligent/HandwriteRecognition/: core.c  readSetFile.c
ArtificialIntelligent/VoiceRecognition/include/: ann.h
ArtificialIntelligent/include/: ann.h  core.h  linkedlist.h  mnist_hwn.h  random.h
ArtificialIntelligent/python_version/: torch_cnn.py  torch_nn.py
QT/bmpViewer/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  viewer.ui
QT/notice/: dialog.cpp  dialog.ui  main.cpp
jpegtobmp/: README.md  main.cpp
jpegtobmp/include/: bmpinfo.h  userdef.h
notice/build-notice-Desktop-Debug/: Makefile  moc_dialog.cpp  notice  ui_dialog.h
notice/notice/: dialog.h  notice.pro  notice.pro.user.4.9-pre1  ui_dialog.h
xwindow/bmpViewer/: README.md  bmp  bmpViewer.c  bmpinfo.c  dbg.sh  util.c  viewer.c
xwindow/bmpViewer/include/: bmpinfo.h
xwindow/imageViewer/: README.md  dbg.sh  jpgprocess.c  viewer.c
xwindow/imageViewer/include/: bmpinfo.h  jpginfo.h  userdef.h  util.h
xwindow/notice/: fire.c  notice.c  readme
